--- a/.github/workflows/terragrunt.yml
+++ b/.github/workflows/terragrunt.yml
@@ -27,6 +27,13 @@ jobs:
         chmod +x terragrunt_linux_amd64
         sudo mv terragrunt_linux_amd64 /usr/local/bin/terragrunt
 
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        role-to-assume: ${{ vars.AWS_ROLE_ARN }}
+        role-session-name: github-deployment-role
+        aws-region: ${{ vars.AWS_REGION }}
+
     - name: Initialize Terragrunt
       working-directory: ./terragrunt-infra
       run: terragrunt init
