--- a/.github/workflows/terragrunt.yml
+++ b/.github/workflows/terragrunt.yml
@@ -30,9 +30,9 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        role-to-assume: ${{ vars.AWS_ROLE_ARN }}
-        role-session-name: github-deployment-role
-        aws-region: ${{ vars.AWS_REGION }}
+        role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+        role-session-name: SampleRoleSession
+        aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Initialize Terragrunt
       working-directory: ./terragrunt-infra
