--- a/.github/workflows/terragrunt.yml
+++ b/.github/workflows/terragrunt.yml
@@ -1,4 +1,4 @@
-name: Terragrunt Deployment
+name: Deploy Infrastructure with Terragrunt
 
 on:
   push:
@@ -10,57 +10,54 @@ on:
     branches:
       - main
 
-permissions:
-  id-token: write
-  contents: read
-
 jobs:
   terragrunt:
-    name: Terragrunt Deploy
+    name: "Terraform with Terragrunt"
     runs-on: ubuntu-latest
 
+    env:
+      TERRAGRUNT_TFPATH: /usr/local/bin/terraform
+      tf_version: '1.0.11'
+      tg_version: 'latest'
+      tf_working_dir: './terragrunt-infra'  # Adjust this path based on your structure
+
+    permissions:
+      id-token: write
+      contents: read
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: 1.0.0 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ env.tf_version }}
 
-    - name: Install Terragrunt
-      run: |
-        wget https://github.com/gruntwork-io/terragrunt/releases/download/v0.31.1/terragrunt_linux_amd64
-        chmod +x terragrunt_linux_amd64
-        sudo mv terragrunt_linux_amd64 /usr/local/bin/terragrunt
+      - name: Configure AWS credentials with OIDC
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        role-to-assume: ${{ vars.AWS_ROLE_ARN }}
-        role-session-name: samplerolesession
-        aws-region: ${{ vars.AWS_REGION }}
+      - name: Install Terragrunt
+        run: |
+          TG_VERSION=$(curl -s https://api.github.com/repos/gruntwork-io/terragrunt/releases/latest | jq -r '.tag_name')
+          curl -L "https://github.com/gruntwork-io/terragrunt/releases/download/$TG_VERSION/terragrunt_linux_amd64" -o terragrunt
+          chmod +x terragrunt
+          sudo mv terragrunt /usr/local/bin/terragrunt
 
-    - name: Initialize Terragrunt
-      working-directory: ./terragrunt-infra
-      run: terragrunt init
+      - name: Initialize and Plan Terragrunt
+        working-directory: ${{ env.tf_working_dir }}  # Adjust path as needed
+        run: |
+          terragrunt run-all init -terragrunt-provider-cache
+          terragrunt run-all plan
 
-    - name: Terragrunt Format
-      working-directory: ./terragrunt-infra
-      run: terragrunt hclfmt
+      - name: Apply Terragrunt
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        working-directory: ${{ env.tf_working_dir }}  # Adjust path as needed
+        run: |
+          terragrunt run-all apply --terragrunt-non-interactive
 
-    - name: Validate Terragrunt configuration
-      working-directory: ./terragrunt-infra
-      run: terragrunt validate
-
-    - name: Plan Terragrunt Deployment
-      working-directory: ./terragrunt-infra
-      run: terragrunt run-all plan --terragrunt-non-interactive
-
-    - name: Apply Terragrunt Deployment
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      working-directory: ./terragrunt-infra
-      run: terragrunt run-all apply --terragrunt-non-interactive
-
-    - name: List directory contents for debugging
-      run: ls -R
+      - name: List directory contents for debugging
+        run: ls -R
