--- a/.github/workflows/ci_plan.yml
+++ b/.github/workflows/ci_plan.yml
@@ -18,7 +18,7 @@ jobs:
       image: ghcr.io/irfan-ssh/terragrunt-docker-image:latest # Replace with your actual image
 
     env:
-      TERRAGRUNT_TFPATH: /usr/local/bin/terraform
+      TERRAGRUNT_TFPATH: /usr/local/bin/terragrunt
       tf_version: '1.0.11'
       tg_version: 'latest'
       tf_working_dir: './terragrunt-infra'  # Adjust this path based on your structure
@@ -57,7 +57,7 @@ jobs:
 
       - name: Initialize Terragrunt with Debug Logging
         working-directory: ${{ env.tf_working_dir }}  # Adjust path as needed
-        run: terragrunt run-all init --terragrunt-provider-cache --terragrunt-non-interactive
+        run: terragrunt run-all init --terragrunt-provider-cache
 
       - name: Plan Terragrunt
         working-directory: ${{ env.tf_working_dir }}  # Adjust path as needed
