--- a/.github/workflows/ci_plan.yml
+++ b/.github/workflows/ci_plan.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Initialize Terragrunt with Debug Logging
         working-directory: ${{ env.tf_working_dir }}  # Adjust path as needed
-        run: terragrunt run-all init --terragrunt-provider-cache
+        run: terragrunt run-all init
 
       - name: Plan Terragrunt
         working-directory: ${{ env.tf_working_dir }}  # Adjust path as needed
