--- a/.github/workflows/ci_plan.yml
+++ b/.github/workflows/ci_plan.yml
@@ -63,5 +63,5 @@ jobs:
         run: terragrunt run-all init
 
       - name: Plan Terragrunt
-        working-directory: ${{ env.tf_working_dir }}  # Adjust path as needed
+        working-directory: ${{ env.tf_working_dir }}  # Adjust path as neededgggg
         run: terragrunt run-all plan
