--- a/.github/workflows/ci_plan.yml
+++ b/.github/workflows/ci_plan.yml
@@ -19,9 +19,9 @@ jobs:
 
     env:
       TERRAGRUNT_TFPATH: /usr/local/bin/terraform
-      tf_version: '1.0.11'
-      tg_version: 'latest'
-      tf_working_dir: './'  # Adjust this path based on your structure
+      tf_version: '1.5.7'
+      tg_version: '0.53.2'
+      tf_working_dir: './'
 
     permissions:
       id-token: write
@@ -39,12 +39,15 @@ jobs:
       - name: Verify Terraform Installation
         run: terraform version
 
-      - name: Install Terragrunt
-        run: |
-          TG_VERSION=$(curl -s https://api.github.com/repos/gruntwork-io/terragrunt/releases/latest | jq -r '.tag_name')
-          curl -L "https://github.com/gruntwork-io/terragrunt/releases/download/$TG_VERSION/terragrunt_linux_amd64" -o terragrunt
-          chmod +x terragrunt
-          sudo mv terragrunt /usr/local/bin/terragrunt
+
+      - name: Check terragrunt HCL
+        uses: gruntwork-io/terragrunt-action@v2
+        with:
+          tf_version: ${{ env.tf_version }}
+          tg_version: ${{ env.tg_version }}
+          tg_dir: ${{ env.tf_working_dir }}
+          tg_command: 'hclfmt --terragrunt-check --terragrunt-diff'
+
   
       - name: Verify installation
         run: |
