--- a/.github/workflows/ci_plan.yml
+++ b/.github/workflows/ci_plan.yml
@@ -1,83 +1,88 @@
-# name: Deploy Infrastructure with Terragrunt
+name: Deploy Infrastructure with Terragrunt
 
-# on:
-#   push:
-#     branches:
-#       - main
-#       - 'feature/**'
-#       - '*'
-#   pull_request:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
+      - 'feature/**'
+      - '*'
+  pull_request:
+    branches:
+      - main
 
-# jobs:
-#   terragrunt:
-#     name: "Terraform with Terragrunt"
-#     runs-on: ubuntu-latest
-#     container:
-#       image: ghcr.io/irfan-ssh/terragrunt-docker-file:sha-0495639 # Replace with your actual image
+jobs:
+  terragrunt:
+    name: "Terraform with Terragrunt"
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/irfan-ssh/terragrunt-docker-file:sha-0495639 # Replace with your actual image
 
-#     env:
-#       TERRAGRUNT_TFPATH: /usr/local/bin/terraform
-#       tf_version: '1.5.7'
-#       tg_version: '0.53.2'
-#       tf_working_dir: './'
+    env:
+      TERRAGRUNT_TFPATH: /usr/local/bin/terraform
+      tf_version: '1.5.7'
+      tg_version: '0.53.2'
+      tf_working_dir: './terragrunt-code'
 
-#     permissions:
-#       id-token: write
-#       contents: read
+    permissions:
+      id-token: write
+      contents: read
 
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-#       - name: Setup Terraform
-#         uses: hashicorp/setup-terraform@v2
-#         with:
-#           terraform_version: ${{ env.tf_version }}
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ env.tf_version }}
 
-#       - name: Verify Terraform Installation
-#         run: terraform version
+      - name: Verify Terraform Installation
+        run: terraform version
 
 
-#       - name: Check terragrunt HCL
-#         uses: gruntwork-io/terragrunt-action@v2
-#         with:
-#           tf_version: ${{ env.tf_version }}
-#           tg_version: ${{ env.tg_version }}
-#           tg_dir: ${{ env.tf_working_dir }}
-#           tg_command: 'hclfmt --terragrunt-check --terragrunt-diff'
+      - name: Check terragrunt HCL
+        uses: gruntwork-io/terragrunt-action@v2
+        with:
+          tf_version: ${{ env.tf_version }}
+          tg_version: ${{ env.tg_version }}
+          tg_dir: ${{ env.tf_working_dir }}
+          tg_command: 'hclfmt --terragrunt-check --terragrunt-diff'
 
   
-#       - name: Verify installation
-#         run: |
-#           terraform --version
-#           terragrunt --version
-#       - name: Configure AWS credentials with OIDC
-#         uses: aws-actions/configure-aws-credentials@v2
-#         with:
-#           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-#           aws-region: ${{ secrets.AWS_REGION }}
+      - name: Verify installation
+        run: |
+          terraform --version
+          terragrunt --version
+      - name: Configure AWS credentials with OIDC
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-#       - name: Install TFLint
-#         uses: terraform-linters/setup-tflint@v4
-#         with:
-#           tflint_version: latest
+      - name: Install TFLint
+        uses: terraform-linters/setup-tflint@v4
+        with:
+          tflint_version: latest
 
-#       - name: Run HCL Format
-#         working-directory: ${{ env.tf_working_dir }}  # Adjust path as needed
-#         run: terragrunt hclfmt
+      - name: Run HCL Format
+        working-directory: ${{ env.tf_working_dir }}  # Adjust path as needed
+        run: terragrunt hclfmt
 
-#       - name: Run TFLint
-#         working-directory: ${{ env.tf_working_dir }}  # Adjust path as needed
-#         run: tflint --init && tflint
+      - name: Run TFLint
+        working-directory: ${{ env.tf_working_dir }}  # Adjust path as needed
+        run: tflint --init && tflint
 
-#       - name: Initialize Terragrunt INIT
-#         working-directory: ${{ env.tf_working_dir }}  # Adjust path as needed
-#         run: | 
-#           ls && ls -a 
-#         # terragrunt run-all init
+      - name: Install Terraform and Terragrunt
+        run: |
+          ls -ashl
+          tfenv install
+          terraform --version
+          # Install Terragrunt
+          curl -L https://github.com/gruntwork-io/terragrunt/releases/download/v0.60.0/terragrunt_linux_amd64 -o /usr/local/bin/terragrunt
+          chmod +x /usr/local/bin/terragrunt
+          terragrunt --version
+        working-directory: ${{ env.tf_working_dir }}
 
-#       - name: Plan Terragrunt
-#         working-directory: ${{ env.tf_working_dir }}  # Adjust path as neededgggg
-#         run: terragrunt run-all plan
+      - name: Plan Terragrunt
+        working-directory: ${{ env.tf_working_dir }}  # Adjust path as neededgggg
+        run: terragrunt run-all plan
