--- a/.github/workflows/ci_plan.yml
+++ b/.github/workflows/ci_plan.yml
@@ -40,13 +40,13 @@ jobs:
         run: terraform version
 
 
-      - name: Check terragrunt HCL
-        uses: gruntwork-io/terragrunt-action@v2
-        with:
-          tf_version: ${{ env.tf_version }}
-          tg_version: ${{ env.tg_version }}
-          tg_dir: ${{ env.tf_working_dir }}
-          tg_command: 'hclfmt --terragrunt-check --terragrunt-diff'
+      # - name: Check terragrunt HCL
+      #   uses: gruntwork-io/terragrunt-action@v2
+      #   with:
+      #     tf_version: ${{ env.tf_version }}
+      #     tg_version: ${{ env.tg_version }}
+      #     tg_dir: ${{ env.tf_working_dir }}
+      #     tg_command: 'hclfmt --terragrunt-check --terragrunt-diff'
 
   
       - name: Verify installation
