--- a/.github/workflows/ci_plan.yml
+++ b/.github/workflows/ci_plan.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Init Terragrunt
         working-directory: ${{ env.tf_working_dir }}
-        run: terragrunt run-all init --terragrunt-log-level debug --terragrunt-debug
+        run: terragrunt run-all init --terragrunt-non-interactive
 
       - name: Plan Terragrunt
         working-directory: ${{ env.tf_working_dir }}
