--- a/.github/workflows/cd_apply.yml
+++ b/.github/workflows/cd_apply.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Apply Terragrunt Plan
         working-directory: ${{ env.tf_working_dir }}
         run: |
-          terragrunt run-all apply -terragrunt-provider-cache -no-color plan.output --terragrunt-non-interactive
+          terragrunt apply -terragrunt-provider-cache -no-color plan.output --terragrunt-non-interactive
 
       - name: List Folder
         working-directory: ${{ env.tf_working_dir }}
